--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,5 @@
 /* purgecss end ignore */
 
 @tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Chonburi&family=Raleway:wght@300;400;600;700&display=swap");
